// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Humanize renders custom millionsOfDollars 1`] = `
.c0 {
  white-space: nowrap;
}

<span>
  <span
    class="c0"
  >
    100000 millions of dollars!
  </span>
</span>
`;

exports[`Humanize renders custom reverse 1`] = `
.c0 {
  white-space: nowrap;
}

<span>
  <span
    class="c0"
  >
    !gnirts desrever m'I olleH
  </span>
</span>
`;

exports[`Humanize renders default big currency 1`] = `
.c0 {
  white-space: nowrap;
}

<span>
  <span
    class="c0"
  >
    9 999,90
  </span>
</span>
`;

exports[`Humanize renders default currency 1`] = `
.c0 {
  white-space: nowrap;
}

<span>
  <span
    class="c0"
  >
    99,00
  </span>
</span>
`;

exports[`Humanize renders default currency with symbol 1`] = `
.c0 {
  white-space: nowrap;
}

<span>
  <span
    class="c0"
  >
    99,00 ₽
  </span>
</span>
`;

exports[`Humanize renders default float 1`] = `
.c0 {
  white-space: nowrap;
}

<span>
  <span
    class="c0"
  >
    99
  </span>
</span>
`;

exports[`Humanize renders default formatter, but pass custom formatters 1`] = `
.c0 {
  white-space: nowrap;
}

<span>
  <span
    class="c0"
  >
    99 
    <span>
      %
    </span>
  </span>
</span>
`;

exports[`Humanize renders default number 1`] = `
.c0 {
  white-space: nowrap;
}

<span>
  <span
    class="c0"
  >
    99
  </span>
</span>
`;

exports[`Humanize renders default percentage 1`] = `
.c0 {
  white-space: nowrap;
}

<span>
  <span
    class="c0"
  >
    99 
    <span>
      %
    </span>
  </span>
</span>
`;

exports[`Humanize renders overrode default number 1`] = `
.c0 {
  white-space: nowrap;
}

<span>
  <span
    class="c0"
  >
    this is overrided number: 99
  </span>
</span>
`;

exports[`Humanize renders without children 1`] = `
.c0 {
  white-space: nowrap;
}

<span
  class="c0"
>
  99 
  <span>
    %
  </span>
</span>
`;
